--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
 	"dependencies": {
 		"@auth/core": "^0.37.4",
 		"@auth/sveltekit": "^1.7.4",
+		"@tailwindcss/vite": "^4.0.3",
 		"better-sqlite3": "^11.7.2",
 		"google-auth-library": "^9.15.0",
 		"sqlite3": "^5.1.7",
+		"tailwindcss": "^4.0.3",
 		"uuid": "^11.0.5"
 	}
 }
