--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@auth/sveltekit": "^1.7.4",
 		"@tailwindcss/vite": "^4.0.3",
 		"better-sqlite3": "^11.7.2",
+		"dotenv": "^16.4.7",
 		"google-auth-library": "^9.15.0",
 		"sqlite3": "^5.1.7",
 		"tailwindcss": "^4.0.3",
