--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@tailwindcss/vite": "^4.0.3",
 		"better-sqlite3": "^11.7.2",
 		"dotenv": "^16.4.7",
+		"frontend": "file:",
 		"google-auth-library": "^9.15.0",
 		"sqlite3": "^5.1.7",
 		"tailwindcss": "^4.0.3",
