--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/better-sqlite3": "^7.6.12",
+		"@types/qrcode": "^1.5.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -28,6 +29,7 @@
 		"better-sqlite3": "^11.7.2",
 		"dotenv": "^16.4.7",
 		"google-auth-library": "^9.15.0",
+		"qrcode": "^1.5.4",
 		"sqlite3": "^5.1.7",
 		"tailwindcss": "^4.0.3",
 		"uuid": "^11.0.5"
