added hamburger menu

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"google-auth-library": "^9.15.0",
 		"qrcode": "^1.5.4",
 		"sqlite3": "^5.1.7",
+		"svelte-hamburgers": "^5.0.0",
 		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss": "^4.0.3",
