--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@smui/button": "^8.0.0-beta.3",
+		"@smui/icon-button": "^8.0.0-beta.3",
+		"@smui/select": "^8.0.0-beta.3",
+		"@smui/textfield": "^8.0.0-beta.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^5.5.3",
 		"@sveltejs/kit": "^2.0.0",
