--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/qrcode": "^1.5.5",
+		"@types/uuid": "^10.0.0",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.475.0",
 		"svelte": "^5.0.0",
