--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-vercel": "^5.6.3",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/luxon": "^3.4.2",
 		"@types/qrcode": "^1.5.5",
 		"@types/uuid": "^10.0.0",
 		"clsx": "^2.1.1",
@@ -38,6 +39,7 @@
 		"dotenv": "^16.4.7",
 		"frontend": "file:",
 		"google-auth-library": "^9.15.0",
+		"luxon": "^3.5.0",
 		"qrcode": "^1.5.4",
 		"simplex-noise": "^4.0.3",
 		"svelte-hamburgers": "^5.0.0",
