non mahe pass info

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-vercel": "^5.6.3",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/base-64": "^1.0.2",
 		"@types/luxon": "^3.4.2",
 		"@types/qrcode": "^1.5.5",
 		"@types/uuid": "^10.0.0",
@@ -36,9 +37,12 @@
 		"@auth/sveltekit": "^1.7.4",
 		"@supabase/supabase-js": "^2.49.1",
 		"@tailwindcss/vite": "^4.0.3",
+		"@types/jsonwebtoken": "^9.0.9",
+		"base-64": "^1.0.0",
 		"dotenv": "^16.4.7",
 		"frontend": "file:",
 		"google-auth-library": "^9.15.0",
+		"js-sha256": "^0.11.0",
 		"luxon": "^3.5.0",
 		"qrcode": "^1.5.4",
 		"simplex-noise": "^4.0.3",
